--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f5f5f5;
+}
+.header{
+	background-color: #011e29;
+	text-align: center;
+	color: white;
+	padding: 10px;
+	display: flex;
+	justify-content: center;
+}
+.latest-news-section{
+	background-color: white;
+	width: 35%;
+	margin: 10px;
+	padding: 10px;
+	text-align: center;
+	border-radius: 10px;
+}
+.pictorial-news-section{
+		background-color: white;
+	width: 35%;
+	margin: 10px;
+	padding: 10px;
+	text-align: center;
+	border-radius: 10px;
+	text-align: center;
+	border-radius: 10px;
+}
+.middle{
+	margin: 10px;
+	background-color: white;
+	text-align: center;
+	border-radius: 10px;
+}
+.body{
+	display: flex;
+}
+img{
+	width: 100%;
+}
